Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63948

attribute "destructor" is not implemented and will be ignored on Integrity

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.10
    • 5.10.0 Beta 2
    • None
    • Integrity (gcc-armv7) on Linux RHEL_7_2 (gcc-x86_64) - Packaging, Release, DisableTests, OpenGLES2, NoUseGoldLinker, AbortTestingOnFirstFailure
    • 82c787ec3b0dc4ddc54639ad47eb82a052446858

      https://codereview.qt-project.org/#/c/209134/
      http://coin/coin/integration/qt/qt5/tasks/1508572513
      http://coin/coin/api/results/qt/qtbase/a76186af63dd1824234648a7143234ea389d9863/LinuxRHEL_7_2x86_64INTEGRITYINTEGRITY_11_04armv7GCCqtci-linux-RHEL-7.2-x86_64-8ccb57Release_DisableTests_OpenGLES2_NoUseGoldLinker/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1508572602/buildlog.txt.gz

      g++ -c -pipe -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -O2 -std=c++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_BOOTSTRAP_DBUS_LIB -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.10.0"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=10 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../moc -I../../../include -I../../../include/QtDBus -I../../../include/QtDBus/5.10.0 -I../../../include/QtDBus/5.10.0/QtDBus -I../../../include/QtCore -I../../../include/QtCore/5.10.0 -I../../../include/QtCore/5.10.0/QtCore -I../../../include/QtXml -I../../../include/QtXml/5.10.0 -I../../../include/QtXml/5.10.0/QtXml -I../../../mkspecs/linux-g++ -o .obj/parser.o ../moc/parser.cpp
      g++ -c -pipe -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -O2 -std=c++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_BOOTSTRAP_DBUS_LIB -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.10.0"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=10 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../moc -I../../../include -I../../../include/QtDBus -I../../../include/QtDBus/5.10.0 -I../../../include/QtDBus/5.10.0/QtDBus -I../../../include/QtCore -I../../../include/QtCore/5.10.0 -I../../../include/QtCore/5.10.0/QtCore -I../../../include/QtXml -I../../../include/QtXml/5.10.0 -I../../../include/QtXml/5.10.0/QtXml -I../../../mkspecs/linux-g++ -o .obj/token.o ../moc/token.cpp
      "global/qrandom.cpp", line 155: error #2000-D: attribute "destructor" is not
                implemented and will be ignored
            static __attribute__((destructor)) void closeDevice(); // assume GCC or a compiler able to understand GCC extensions
                                  ^
      
      make[2]: *** [.obj/qrandom.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      g++ -c -pipe -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -O2 -std=c++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_BOOTSTRAP_DBUS_LIB -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"5.10.0"' -DQT_VERSION_MAJOR=5 -DQT_VERSION_MINOR=10 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -I. -I../moc -I../../../include -I../../../include/QtDBus -I../../../include/QtDBus/5.10.0 -I../../../include/QtDBus/5.10.0/QtDBus -I../../../include/QtCore -I../../../include/QtCore/5.10.0 -I../../../include/QtCore/5.10.0/QtCore -I../../../include/QtXml -I../../../include/QtXml/5.10.0 -I../../../include/QtXml/5.10.0/QtXml -I../../../mkspecs/linux-g++ -o .obj/qdbuscpp2xml.o qdbuscpp2xml.cpp
      make[2]: Leaving directory `/home/qt/work/qt/qtbase/src/corelib'
      make[1]: *** [sub-corelib-make_first] Error 2
      make[1]: *** Waiting for unfinished jobs....
      g++ -Wl,--gc-sections -Wl,-O1 -o ../../../bin/qdbuscpp2xml .obj/moc.o .obj/preprocessor.o .obj/generator.o .obj/parser.o .obj/token.o .obj/qdbuscpp2xml.o   -L/home/qt/work/qt/qtbase/lib -lQt5BootstrapDBus -lQt5Bootstrap -lpthread 
      make[2]: Leaving directory `/home/qt/work/qt/qtbase/src/tools/qdbuscpp2xml'
      make[1]: Leaving directory `/home/qt/work/qt/qtbase/src'
      make: *** [sub-src-make_first] Error 2
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes